<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="2"
        app:srcCompat="@drawable/globe" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/loader_page_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_guesscountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:text="@string/button_guesscountry"
        android:textSize="10sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_guesshints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:text="@string/button_guesshints"
        android:textSize="10sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_guesstheflag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:text="@string/button_guesstheflag"
        android:textSize="10sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button_advancedlevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:text="@string/button_advancedlevel"
        android:textSize="10sp"
        android:textStyle="bold" />

</LinearLayout>