<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessTheCountry"
    android:background="#dcf1f7">


    <ImageView
        android:id="@+id/imgview_1"
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        app:srcCompat="@drawable/ad"
        android:contentDescription="@string/flag_view" />

    <TextView
        android:id="@+id/txtview_guessthecountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/guessthecountry_button"
        android:layout_below="@+id/imgview_1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="193dp"
        android:layout_marginRight="193dp"
        android:layout_marginBottom="132dp"
        android:text="@string/txtview_guess_the_country"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/guessthecountry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="12dp"
        android:text="@string/btn_submit"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtview_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="129dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="162dp"
        android:layout_height="41dp"
        android:layout_below="@+id/imgview_1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="193dp"
        android:layout_marginLeft="193dp"
        android:layout_marginTop="43dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview_countryname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/guessthecountry_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>