<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".GuessHints">

    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSubmit"
        >



        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/guessthecountrylabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/guess_the_country_guesshint"
            android:textSize="16sp"
            android:textStyle="bold" />

        <GridView
            android:id="@+id/gridViewAnswer"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:horizontalSpacing="4dp"
            android:verticalSpacing="4dp"
            android:columnWidth="40dp"
            android:numColumns="auto_fit"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/guessCharacterLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:text="@string/select_answer_guesshint"
            android:textSize="16sp"
            android:textStyle="bold" />
        <GridView
            android:id="@+id/gridViewSuggest"
            android:layout_margin="0dp"
            android:padding="4dp"
            android:horizontalSpacing="4dp"
            android:verticalSpacing="4dp"
            android:columnWidth="40dp"
            android:numColumns="auto_fit"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/statusText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:text="@string/submitbtn_text"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>