<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessTheFlag"
    android:background="#dcf1f7">



    <ImageButton
        android:id="@+id/imgButton1"
        android:layout_width="192dp"
        android:layout_height="108dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/noll"
        app:srcCompat="@drawable/au" />

    <ImageButton
        android:id="@+id/imgButton2"
        android:layout_width="192dp"
        android:layout_height="108dp"
        android:layout_below="@+id/imgButton1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/noll"
        app:srcCompat="@drawable/za" />

    <ImageButton
        android:id="@+id/imgButton3"
        android:layout_width="192dp"
        android:layout_height="108dp"
        android:layout_below="@+id/imgButton2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="196dp"
        android:contentDescription="@string/noll"
        app:srcCompat="@drawable/an" />

    <TextView
        android:id="@+id/pickflagtxt"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_above="@+id/countryname"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="12dp"
        android:text="@string/pick_flag_for_country"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/countryname"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="183dp"
        android:layout_marginLeft="183dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="137dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/status_guessTheFlag"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="178dp"
        android:layout_marginLeft="178dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:layout_marginBottom="81dp"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/nxtbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="17dp"
        android:text="@string/btn_next"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>